@@ -35,6 +35,7 @@ Release 0.9.3
 - add/improve unit tests
 - move who's online code into plugin
 - add ZMTestCase base class to allow comparing arrays
+- add first draft of a product finder (not yet used)
 
 Release 0.9.2
 - add database support for data type blob
